fix(SU): VAN-24561 high contrast mode show line in system update page

--- a/vtr-ui/src/app/components/pages/page-device-updates/children/available-updates/available-updates.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-updates/children/available-updates/available-updates.component.scss
@@ -10,11 +10,13 @@
 	@media #{$white-on-black} {
 		box-shadow: none;
 		@include white-border;
+		border-top: none;
 	}
 
 	@media #{$black-on-white} {
 		box-shadow: none;
 		@include black-border;
+		border-top: none;
 	}
 
 	.select-all {
